tests/ui/impl-trait/precise-capturing/forgot-to-capture-type.stderr
warning: the feature `precise_capturing` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/forgot-to-capture-type.rs:1:12
   |
LL | #![feature(precise_capturing)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123432 <https://github.com/rust-lang/rust/issues/123432> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `impl Trait` must mention all type parameters in scope
  --> $DIR/forgot-to-capture-type.rs:4:15
   |
LL | fn type_param<T>() -> impl use<> Sized {}
   |               ^       ---------------- type parameter is implicitly captured by this `impl Trait`
   |
   = note: currently, all type parameters are required to be mentioned in the precise captures list

error: `impl Trait` must mention all type parameters in scope
  --> $DIR/forgot-to-capture-type.rs:7:1
   |
LL | trait Foo {
   | ^^^^^^^^^
LL |
LL |     fn bar() -> impl use<> Sized;
   |                 ---------------- type parameter is implicitly captured by this `impl Trait`
   |
   = note: currently, all type parameters are required to be mentioned in the precise captures list

error: aborting due to 2 previous errors; 1 warning emitted

